--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "description": "Static interim for Con Dameron",
     "scripts": {
-        "perms": "chmod -R 755 html/img"
+        "perms": "chmod -R 755 html/img",
+        "deploy": "./deploy.sh"
     }
 }
